# rag-guardian

./: .gitignore  .pre-commit-config.yaml  .rag-guardian.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  PUBLISHING.md  QA_TEST_REPORT.md  README.md  STAR_POTENTIAL_ANALYSIS.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  label-sync.yml  rag-quality-example.yml  release.yml  stale.yml  tests.yml
docs/: getting-started.md  metrics-guide.md
examples/llamaindex/: README.md  simple_example.py
examples/quickstart/: README.md  simple_rag.py
promotion_content/: PROMOTION_CHECKLIST.md  devto_article.md  linkedin_post.md  r_LangChain.md  r_MachineLearning.md  r_Python.md  submission_list.json  twitter_thread.txt
rag_guardian/: __init__.py  __main__.py  exceptions.py
rag_guardian/cli/: __init__.py
rag_guardian/core/: __init__.py  config.py  executor.py  loader.py  pipeline.py  types.py
rag_guardian/integrations/: __init__.py  base.py  custom.py  langchain.py  llamaindex.py
rag_guardian/metrics/: __init__.py  answer_correctness.py  base.py  context_relevancy.py  faithfulness.py  groundedness.py
rag_guardian/reporting/: __init__.py  html.py  json.py
rag_guardian/utils/: __init__.py  logging.py
scripts/: promote.py
tests/: example_cases.jsonl
tests/fixtures/: example_cases.jsonl
tests/integration/: test_end_to_end.py  test_full_workflow.py
tests/unit/: test_config.py  test_exceptions.py  test_html_reporter.py  test_langchain_adapter.py  test_llamaindex_adapter.py  test_loader.py  test_metrics.py  test_types.py
